# postgres-head-hunter

./: .gitignore  README.md  main.py  pyproject.toml
src/: abstract_head_hunter_api.py  config.py  db_manager.py  employers.py  head_hunter_api.py  utils.py  vacancyes.py
